# codeswarm

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  STATE_SUMMARY_2026-02-25.md  WHITEPAPER.md  WHITEPAPER_BOARD_BRIEF.md  WHITEPAPER_EXECUTIVE.md  bootstrap.sh  install-codeswarm.sh  install.js  install.sh  log.txt  package-lock.json  package.json  pyproject.toml
.beads/: metadata.json
agent/: __init__.py  agent_wrapper.py  claude_worker.py  codex_worker.py  mock_worker.py  outbox_follower.py  worker.py
cli/: README.md  index.js  package-lock.json  package.json  tsconfig.json
common/: __init__.py  config.py
configs/: combined.json  example.json  hpcfund.json  local-dev.example.json  local.json
docker/: local-worker.Dockerfile
docs/: APPROVAL_PROBE.md  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_POLICY_PLAN.md  AWS_SETUP.md  CLAUDE_AGENT_INTEGRATION_PLAN.md  CONFIG_SCHEMA.md  CONTAINERIZED_WORKERS_PLAN.md  ORCHESTRATED_PROJECTS_PLAN.md  PROTOCOL.md  PROTOCOL_SPEC.md  PROVIDER_INTERFACE.md  QA_TEST_PLAN.md  SMOKE_TESTS.md  USER_GUIDE.md  architecture.md  slurm-claude-support-checklist.md
email_recipient_bot/: Dockerfile  README.md  app.py  config.py  docker-compose.yml  forwarded_parser.py  models.py  requirements.txt  retrieval.py  runtime.py  service.py  storage.py  worker.py
router/: README.md  __init__.py  router.py  test_project_usage.py  test_provider_status.py  test_worker_runtime_support.py
slurm/: __init__.py  allocate_and_prepare.py  allocation_holder.sbatch  launch_codex_cluster.sbatch
ssh/: __init__.py  cleanup_job.py  (+1 more)
(+124 files in other folders)
