[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeswarm"
version = "0.1.1"
description = "Provider-agnostic multi-agent execution and orchestration for local, Slurm, and AWS runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Keith Lowery" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: System :: Clustering",
]
dependencies = []

[project.optional-dependencies]
claude = [
  "claude-agent-sdk",
]
dev = [
  "build>=1.2.2",
]

[project.scripts]
codeswarm-router = "router.router:main"
codeswarm-outbox-follower = "agent.outbox_follower:main"
codeswarm-codex-worker = "agent.codex_worker:main"
codeswarm-claude-worker = "agent.claude_worker:main"
codeswarm-mock-worker = "agent.mock_worker:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent*", "common*", "router*", "slurm*", "ssh*"]

[tool.setuptools.package-data]
slurm = ["*.sbatch"]
